...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.77" />

    <Button
        android:id="@+id/start_log_in"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/LogIn"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
        app:layout_constraintStart_toStartOf="@+id/guideline3"
        app:layout_constraintTop_toTopOf="@+id/guideline7"
        tools:ignore="HardcodedText,VisualLintButtonSize" />

    <Button
        android:id="@+id/start_sign_up"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:text="@string/Sign_Up"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline9"
        app:layout_constraintEnd_toStartOf="@+id/guideline6"
...
